# thegoach.dev

./: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierrc  Cargo.toml  Dockerfile  README.md  Rocket.toml  deploy.sh  docker-compose.yml  gatsby-config.js  gatsby-node.js  package-lock.json  package.json  setup_env.sh
.github/workflows/: dotnet.yml
Assets/: gulpfile.js  package-lock.json  package.json
Assets/src/: theme-1.scss
__old/: package.json
__old/src/components/: layout.tsx  navigation.tsx
build-helpers/: blog-page.js
data/: cv.json
data/pages/: about.md  blog.md
data/posts/: hello_world.md  posts.json
public/: cv.css  styles.css
src/: blog.rs  blogpost.rs  cache.rs  cache_fairing.rs  html.js  main.rs  markdown.rs  routes.rs  types.rs
src/components/: ContactWidget.tsx  HeadBanner.tsx  avatar.js  bio.js  copyright-footer.tsx  index.js  layout.js  layout.tsx  menu.js  multiAvatar.js  navigation.tsx  seo.js  seo.tsx  social-widget.tsx  social.js
src/formatters/: date.rs
src/layouts/: default-layout.js  layout.scss  typebase.scss
src/pages/: 404.js  404.tsx  about.js  about.tsx  blog.js  blog.tsx  index.js  index.tsx
src/styles/: _typeography.scss  _variables.scss  social.scss  style.css  styles.scss
src/templates/: blog-post.js  blog-post.tsx
src/thegoach.dev/: Program.cs  _Imports.razor
src/web/: about.rs  blog.rs  cv.rs  error.rs  index.rs  mod.rs
templates/: 404.html.tera  500.html.tera  about.html.tera  base.html.tera  blog.html.tera  cv.html.tera  index.html.tera  page.html.tera  post.html.tera
(+21 files in other folders)
