[package]
name = "thegoach_dev"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = { version="0.4.2", features = ["tera_templates"]}
time = {version="0.2.5",features=["serde"]}
